Use long form for JVM switches